--- a/package.json
+++ b/package.json
@@ -15,8 +15,14 @@
     "sass": "^1.32.8"
   },
   "devDependencies": {
+    "@testing-library/dom": "^7.31.2",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
+    "babel-jest": "^27.0.5",
+    "jest": "^27.0.5",
+    "jest-dom": "^4.0.0",
     "typescript": "^4.2.3"
   }
 }
