--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "babel-jest": "^27.0.5",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.5",
     "jest-dom": "^4.0.0",
     "typescript": "^4.2.3"
