--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "10.0.9",
+    "next-auth": "^3.27.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
@@ -25,6 +26,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.5",
     "jest-dom": "^4.0.0",
+    "ts-jest": "^27.0.3",
     "typescript": "^4.2.3"
   }
 }
