--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "stripe": "^8.176.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^7.31.2",
