--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "faunadb": "^4.4.1",
     "next": "10.0.9",
     "next-auth": "^3.29.0",
     "react": "17.0.2",
