--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.22.0",
+    "axios": "^0.25.0",
     "faunadb": "^4.4.1",
     "next": "10.0.9",
     "next-auth": "^3.29.0",
