build(prismic): initial config

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,6 @@ FAUNADB_DOMAIN=db.us.fauna.com
 
 # JWT
 SIGNING_KEY=a4fdbc7bcbc0a8ced82d006701d9df7d
+
+# Prismic CMS
+PRISMIC_ACCESS_TOKEN=MC5ZcGFhOEJBQUFDSUFjTENq.DyTvv70aOu-_vUzvv70SeO-_ve-_vVxodu-_vVjvv70a77-9FO-_vQIgBV_vv73vv70Tez3vv70
