--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest"
+    "test": "jest",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@prismicio/client": "^6.5.0",
+    "@prismicio/helpers": "^2.3.0",
+    "@prismicio/react": "^2.4.1",
+    "@prismicio/slice-simulator-react": "^0.2.2",
     "@stripe/stripe-js": "^1.22.0",
     "axios": "^0.25.0",
     "faunadb": "^4.4.1",
@@ -30,6 +35,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.5",
     "jest-dom": "^4.0.0",
+    "slice-machine-ui": "^0.3.8",
     "ts-jest": "^27.0.3",
     "typescript": "^4.2.3"
   }
