feat(posts): data integration with prismic API

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "faunadb": "^4.4.1",
     "next": "10.0.9",
     "next-auth": "^3.29.0",
+    "prismic-dom": "^2.2.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
@@ -30,6 +31,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@types/node": "^14.14.37",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.3",
     "babel-jest": "^27.0.5",
     "identity-obj-proxy": "^3.0.0",
